fix: presence indicator is cut off

--- a/src/dotnet/UI.Blazor/Components/Button/button.css
+++ b/src/dotnet/UI.Blazor/Components/Button/button.css
@@ -32,7 +32,7 @@ body.device-ios * {
 .btn.btn-md[data-button-class="default"] {
     @apply min-h-12 h-12 md:min-h-10 md:h-10 w-fit;
 }
-.btn * {
+.btn .btn-title {
     @apply truncate;
 }
 .btn > .btn-content {
